force-app/main/default/objects/Expense__c/fields/Approval_Process_Started__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Process Started</label>
    <type>Checkbox</type>
</CustomField>