force-app/main/default/objects/Expense__c/fields/Expense_Comment__c.field-meta.xml
<CustomField>
    <fullName>Expense_Comment__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>