force-app/main/default/objects/Expense__c/fields/Expense_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expense_Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Expense_Item__c.Expense_Item_Amount__c</summarizedField>
    <summaryForeignKey>Expense_Item__c.Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>