force-app/main/default/objects/Expense__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>ExpenseItem__c.Amount__c</summarizedField>
    <summaryForeignKey>ExpenseItem__c.Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>